# event_camera

./: README.md
optimal/devel/: .catkin
optimal/devel/include/dvs_msgs/: Event.h  EventArray.h
optimal/devel/lib/contrast/: contrast_cv  contrast_cvx  contrast_cvx1  contrast_cvxy  contrast_cvxyr  contrast_simple  contrast_y  opencv
optimal/devel/lib/optimal_event/: event_node  event_process  event_pub  event_test  event_time  event_txt  publish_node  subscribe_node
optimal/devel/lib/pkgconfig/: contrast.pc  contrast_ceres.pc  contrst_ceres.pc  davis_ros.pc  dvs_msgs.pc  ipopt_test.pc  optimal_event.pc
optimal/devel/share/contrast/cmake/: contrastConfig.cmake
optimal/devel/share/contrast_ceres/cmake/: contrast_ceresConfig.cmake
optimal/devel/share/contrst_ceres/cmake/: contrst_ceresConfig.cmake
optimal/devel/share/davis_ros/cmake/: davis_rosConfig.cmake
optimal/devel/share/dvs_msgs/cmake/: dvs_msgs-msg-extras.cmake  dvs_msgs-msg-paths.cmake  dvs_msgsConfig.cmake
optimal/devel/share/ipopt_test/cmake/: ipopt_testConfig.cmake
optimal/devel/share/optimal_event/cmake/: optimal_eventConfig.cmake
optimal/devel/share/roseus/ros/dvs_msgs/: manifest.l
optimal/src/contrast/: CMakeLists.txt
optimal/src/contrast/src/: contrast_cvx.cpp  contrast_cvx1.cpp  contrast_cvxy.cpp  contrast_cvxyr.cpp  contrast_y.cpp  eigen.cpp  opencv.cpp
optimal/src/dvs_msgs/: CMakeLists.txt
optimal/src/ipopt_test/: CMakeLists.txt
optimal/src/ipopt_test/src/: test.cpp
optimal/src/optimal_event/: CMakeLists.txt
optimal/src/optimal_event/config/: data_x1140.txt  data_x1180.txt  data_x140.txt  data_x180.txt  data_x40.txt  data_x80.txt  data_x_140.txt  data_x_180.txt  datax140.txt  datax180.txt  datax40.txt  datax80.txt  event.txt  events.txt  events1.txt  hx1.txt  hy1.txt  out.txt  out_2.0_x1.txt  out_2.0_x11.txt  out_2.0_x_1.txt  r.txt  time.txt
optimal/src/optimal_event/include/optimal_event/: common.h  contrast_max.h  event_pub.h
optimal/src/optimal_event/src/: contrast_max.cpp  event_node.cpp  event_process.cpp  event_pub.cpp  event_test.cpp  event_time.cpp  event_txt.cpp  publish_node.cpp  subscribe_node.cpp  time_node.cpp
